# lol-bot-cpp

./: .gitignore  .gitmodules  AsheMidBot.cpp  AsheMidBot.hpp  CMakeLists.txt  ClientLevelingBot.cpp  ClientLevelingBot.hpp  DirectInputKeyboardScancodes.hpp  LICENSE  LeaguePixels.hpp  LeaguePixelsAndPoints.hpp  LeaguePointsAndPixels.hpp  LeagueStructs.hpp  LevelingBot.cpp  LevelingBot.hpp  LevelingBotDriver.cpp  LevelingBotPixelsAndPoints.hpp  LoLBot.sln  OutOfGameBot.cpp  OutOfGameBot.hpp  Pixel.hpp  README.md  RankedBot.cpp  Robot Testing.sln  Robot Testing.vcxproj  Robot Testing.vcxproj.filters  Robot.cpp  Robot.hpp  RobotDriver.cpp  YuumiBot.cpp  YuumiBot.hpp  YuumiBotDriver.cpp  YuumiBotPixelsAndPoints.hpp  cursormove.cpp  fixterminal.bat  lol_leveling_bot.cpp  lol_leveling_bot.sln  lol_leveling_bot.vcxproj  lol_leveling_bot.vcxproj.filters  main.cpp  (+1 more)
.github/workflows/: stale.yml
BotController/: BotController.cpp  BotController.vcxproj  BotController.vcxproj.filters  Pixel.hpp
LoL-Bot/: LoL-Bot.sln
LoL-Bot/LoL-Bot/: LoL-Bot.cpp  LoL-Bot.vcxproj  LoL-Bot.vcxproj.filters
src/: driver.cpp
src/definitions/: bot.cpp  champion_bot.cpp  client_bot.cpp  shell.cpp
src/definitions/champions/: ashe_bot.cpp
src/headers/: bot.hpp  bots.hpp  champion_bot.hpp  champions.hpp  client_bot.hpp  control.hpp  roles.hpp  shell.hpp  string_modifiers.hpp
src/headers/champions/: ashe_bot.hpp
